--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ body {
 }
 .list {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 .link {
     text-decoration: none;
@@ -32,6 +34,14 @@ body {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     margin: -1px;
+}
+
+.container {
+    margin: 0 auto;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: 2px solid orange;
 }
 
 /* header styles */
@@ -50,17 +60,35 @@ background-color: var(--primary-white-color);
     font-size: 26px;
     line-height: 1.19;
 }
-.footer > .logo {
+.footer .logo {
     color: var(--primary-white-color);
 }
 
 /* nav menu styles */
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+/* .site-nav .item {
+    margin-right: 50px;
+}
+
+.site-nav .item:last-child {
+    margin-right: 0;
+} */
+
+.site-nav .item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+
 }
 .site-nav .link:hover, 
 .site-nav .link:focus {
@@ -71,6 +99,27 @@ background-color: var(--primary-white-color);
 }
 
 /* header contact styles */
+.header-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+}
+
+.head-contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.head-contact .item + .item{
+    margin-left: 50px;
+} 
+
 .head-contact .link {
     color: var(--primary-text-color);
     font-weight: 500;
@@ -86,15 +135,18 @@ background-color: var(--primary-white-color);
 /* hero styles */
 .hero {
     background-color: #2F303A;
+    text-align: center;
 }
 .hero-title {
     color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 30px;
+
 }
 
 /* button styles */
@@ -108,6 +160,11 @@ background-color: var(--primary-white-color);
     text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
+    display: inline-block;
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 216px;
+    text-align: center;
 }
 .btn:hover, 
 .btn:focus {
@@ -122,6 +179,8 @@ background-color: var(--primary-white-color);
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 50px;
 }
 
 /* features section styles */
@@ -131,10 +190,14 @@ background-color: var(--primary-white-color);
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .features-list .list-text {
     font-size: 14px;
     line-height: 1.71;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 /* activity section styles */
@@ -143,6 +206,12 @@ background-color: var(--primary-white-color);
 .section.team {
     background-color: var(--secondary-bcg-color);
 }
+
+.team .section-title {
+    padding-top: 94px;
+}
+
+
 
 .team-member {
     background-color: var(--primary-white-color);
@@ -154,10 +223,16 @@ background-color: var(--primary-white-color);
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .team-list .list-text {
     font-size: 16px;
     line-height: 1.19;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 /* footer styles */
