--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,18 @@ body {
 .link {
     text-decoration: none;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
+
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -41,14 +53,20 @@ body {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 2px solid orange;
+    /* outline: 1px solid orange; */
 }
 
 /* header styles */
 .page-header {
 background-color: var(--primary-white-color);
+border-bottom: 1px solid #ECECEC;
 }
 
+.header-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 /* logo styles */
 .logo-web {
     color: var(--accent-color);
@@ -65,30 +83,26 @@ background-color: var(--primary-white-color);
 }
 
 /* nav menu styles */
+.nav-menu {
+    display: flex;
+    align-items: center;
+}
+
 .site-nav {
     display: flex;
     margin-left: 93px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
-
-/* .site-nav .item {
-    margin-right: 50px;
-}
-
-.site-nav .item:last-child {
-    margin-right: 0;
-} */
-
 .site-nav .item:not(:last-child) {
     margin-right: 50px;
 }
-
 .site-nav .link {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-
 }
 .site-nav .link:hover, 
 .site-nav .link:focus {
@@ -99,23 +113,13 @@ background-color: var(--primary-white-color);
 }
 
 /* header contact styles */
-.header-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav-menu {
-    display: flex;
-    align-items: center;
-}
-
 .head-contact {
     display: flex;
     align-items: center;
     margin-left: auto;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
-
 .head-contact .item + .item{
     margin-left: 50px;
 } 
@@ -138,32 +142,38 @@ background-color: var(--primary-white-color);
     text-align: center;
 }
 .hero-title {
+    max-width: 696px;
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 200px;
+
     color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 30px;
-
+    text-align: center;
 }
 
 /* button styles */
 .btn {
+    margin-bottom: 200px;
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 216px;
+
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
-    text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
     display: inline-block;
-    border-radius: 4px;
-    padding: 10px 32px;
-    min-width: 216px;
     text-align: center;
 }
 .btn:hover, 
@@ -184,6 +194,16 @@ background-color: var(--primary-white-color);
 }
 
 /* features section styles */
+.features-list {
+    display: flex;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    gap: 30px;
+
+}
+
+
+
 .features-list .title {
     color: var(--title-text-color);
     font-weight: 700;
@@ -192,15 +212,23 @@ background-color: var(--primary-white-color);
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 10px;
+    width: 270px;
 }
 .features-list .list-text {
     font-size: 14px;
     line-height: 1.71;
     margin-top: 0;
     margin-bottom: 0;
+    width: 270px;
 }
 
 /* activity section styles */
+.activity-list {
+    display: flex;
+    gap: 30px;
+    padding-bottom: 94px;
+}
+
 
 /* team section styles */
 .section.team {
@@ -211,10 +239,19 @@ background-color: var(--primary-white-color);
     padding-top: 94px;
 }
 
-
-
 .team-member {
     background-color: var(--primary-white-color);
+}
+
+.team-list {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    padding-bottom: 94px;
+}
+
+.member-img {
+    margin-bottom: 30px;
 }
 
 .team-list .title {
@@ -233,12 +270,23 @@ background-color: var(--primary-white-color);
     text-align: center;
     margin-top: 0;
     margin-bottom: 0;
+    padding-bottom: 30px;
 }
 
 /* footer styles */
+.logo-footer {
+    padding-top: 60px;
+    margin-bottom: 20px;
+}
+
+.address-content {
+    padding-bottom: 60px;
+}
+
 .footer {
 background-color: var(--footer-bcg-color);
 }
+
 .address {
     color: var(--primary-white-color);
     font-style: normal;
@@ -259,9 +307,42 @@ background-color: var(--footer-bcg-color);
 
 /* portfolio page styles */
 
+.section.portfolio {
+    background-color: var(--primary-bcg-color);
+    
+}
+
+.portfolio-container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.list.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.filter-menu {
+    display: flex;
+    width: 575px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 34px;
+    gap: 8px;
+    justify-content: center;
+}
+
+
+
 .filter {
+    display: inline-block;
+    text-align: center;
+    border-radius: 4px;
+    padding: 6px 22px;
+
     color: var(--title-text-color);
     background-color: var(--secondary-bcg-color);
+    border-color: transparent;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -276,7 +357,16 @@ background-color: var(--footer-bcg-color);
     background-color: var(--accent-color);
 }
 
+.portfolio-img {
+    margin-bottom: 20px;
+}
+
 .cards .title {
+    min-width: 322px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-bottom: 4px;
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 18px;
@@ -285,12 +375,32 @@ background-color: var(--footer-bcg-color);
 }
 
 .cards .category {
+    min-width: 322px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+
     color: var(--primary-text-color);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
 }
 
+
+
 .cards {
     background-color: var(--primary-white-color);
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border: 1px solid #eeeeee;
+;;
+}
+
+.cards:nth-child(3n) {
+    margin-right: 0;
+}
+
+.cards:nth-last-child(-n +3) {
+    margin-bottom: 0;
 }
