--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6, p {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 1px solid orange;
+    /* outline: 1px solid orange; */
 }
 
 /* header styles */
